<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.KonsultasiFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/consulting"
                    android:textColor="@color/putih"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/ic_local_hospital"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_local_hospital"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/layout_cari"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/tepi"
            android:textSize="@dimen/h3"
            android:textColor="@color/black"
            android:text="Mencari Apoteker untuk berkonsultasi"
            android:layout_above="@+id/search"/>

        <Button
            android:id="@+id/search"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:background="@drawable/konsultasi_button"
            android:text="START"
            android:textColor="@color/putih"
            android:textSize="@dimen/h1" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_aktif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/tepi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/tepi">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kosultasi Berjalan"
                    android:textSize="@dimen/h3"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:padding="@dimen/tepi"/>

                <Button
                    android:id="@+id/lanjutkan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lanjutkan"
                    android:background="@drawable/all_button"
                    android:padding="@dimen/tepi"
                    android:textColor="@color/putih"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_waiting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/tepi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/tepi">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pengajuan_konsultasi_telah_di_sampaikan_kepada_apoteker_terkait_harap_untuk_menunggu_konfirmasi_dari_apoteker"
                    android:textSize="@dimen/h3"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:padding="@dimen/tepi"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_diterima"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/tepi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/tepi">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kosultasi_anda_telah_diterima_apoteker_silahkan_untuk_memulai_sesi_konsultasi_anda_dengan_menekan_tombol_mulai"
                    android:textSize="@dimen/h3"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:padding="@dimen/tepi"/>

                <Button
                    android:id="@+id/mulai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mulai"
                    android:background="@drawable/all_button"
                    android:padding="@dimen/tepi"
                    android:textColor="@color/putih"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>