<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context=".fragment.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="18dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/putih"
                    android:textSize="22sp" />


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorAccent"
            app:fillColor="@color/colorPrimary"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_konsultasi"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tiny6dp"
            android:layout_marginRight="@dimen/tiny6dp"
            android:layout_marginTop="@dimen/tiny6dp"
            android:layout_marginBottom="@dimen/tiny6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="405dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="9dp"
                android:paddingRight="16dp"
                android:paddingBottom="9dp">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/menu_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/onlinechat" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/tepi"
                    android:paddingStart="@dimen/tepi"
                    android:paddingEnd="@dimen/tepi">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/konsultasi_online"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deskripsi_kosultasi"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--<androidx.cardview.widget.CardView
            android:id="@+id/menu_appointment"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tiny6dp"
            android:layout_marginRight="@dimen/tiny6dp"
            android:layout_marginBottom="@dimen/tiny6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="405dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="9dp"
                android:paddingRight="16dp"
                android:paddingBottom="9dp">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/menu_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/consultation" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/tepi"
                    android:paddingEnd="@dimen/tepi">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Konsultasi Offline"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/tepi"
                        android:text="@string/deskripsi_appointment"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_diskusi"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tiny6dp"
            android:layout_marginRight="@dimen/tiny6dp"
            android:layout_marginBottom="@dimen/tiny6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="405dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="9dp"
                android:paddingRight="16dp"
                android:paddingBottom="9dp">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/menu_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ask" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/tepi"
                    android:paddingEnd="@dimen/tepi">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tanya Jawab"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lakukan tanya-jawab terbuka terhadap apoteker-apoteker di sekitar anda."
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>-->
    </LinearLayout>

</LinearLayout>